Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66843

Rendering of QML items is not always respecting the z order when using GL_NV_ path_rendering extension

    XMLWordPrintable

Details

    Description

      Rendering of QML items is not always respecting the z order on some setups, although the Z order is indicating that it is correct the actual result is different to what is expected.

      If the scene contains a Shape element and running on hardware that supports the GL_NV_path_rendering extension, then the z order is not always respected.

      The attached case will fail in this scenario, but will behavior correctly if the Shape node is changed to:

          Shape 
          {
              vendorExtensionsEnabled: false
              z: -1
          }

      Attachments

        1. qmltest bug.png
          25 kB
          Andy Shaw
        2. qtbug66843.tar.gz
          2 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-66843
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes