Disable GL_NV_path_rendering unless explicitly requested

Flip the default value of enableVendorExtensions, so that we use
the generic Shape backend (triangulating + QSGGeometryNode) by
default, even on NVIDIA systems. The Nvpr backend is only tried when
enableVendorExtensions is set to true by the application.

This makes the offering more stable over all since applications will not
run into confusing glitches that only reproduce on certain systems while
behaving differently on others.

[ChangeLog][QtQuick] The Shape item is changed not to try using
GL_NV_path_rendering by default, unless explicitly requested. Thus the
default value of enableVendorExtensions is now false.

Task-number: QTBUG-66843
Task-number: QTBUG-66457
Change-Id: I564708b672bd08a8e760af689d64349aab4ead82
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>